Test getNearbyAttractions fixed.